--- a/Proyecto_Final/src/app/components/experience/experience.component.html
+++ b/Proyecto_Final/src/app/components/experience/experience.component.html
@@ -1,6 +1,6 @@
 <div class="experience">
     <div class="row">
-        <div class="col sm-12 lg-6">
+        <div class="col sm-12 lg-6 columnas">
             <h1 class="titulo">Experiencia laboral</h1>
                 <ul class="lista1">
                     <li><h1 class="h1inside"> Operario en fabrica de productos dieteticos - Ania</h1> <H3 class="h3inside">mayo 2017 - marzo 2018</H3>
@@ -16,7 +16,7 @@
                 </ul>
         </div>
 
-        <div class="col sm-12 lg-6">
+        <div class="col sm-12 lg-6 columnas">
             <h1 class="titulo">Educación</h1>
                 <ul class="lista1">
                     <li><h1 class="h1inside">Bachillerato orientado en Economía - Instituto Mariano Moreno</h1> <H3 class="h3inside">2011 - 2017</H3>
