--- a/Proyecto_Final/src/app/components/banner/banner.component.html
+++ b/Proyecto_Final/src/app/components/banner/banner.component.html
@@ -2,7 +2,7 @@
     <div class="miportafolio">
         <h1>Portafolio Responsive 2022 #YoProgramo</h1>
     </div>
-    <div class="banner">
+    <div class="banner col">
         <img src="../../../assets/img/LEONEL CHUPITEA.jpg" id="banner" alt="">
     </div>
 </div>
