--- a/Proyecto_Final/src/assets/css/styles.css
+++ b/Proyecto_Final/src/assets/css/styles.css
@@ -3,3 +3,12 @@
 *{
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
