--- a/Proyecto_Final/src/app/components/about/about.component.html
+++ b/Proyecto_Final/src/app/components/about/about.component.html
@@ -1,9 +1,7 @@
-<div class="everything">
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <img src="../../../assets/img/perfil.png" id="perfil" alt="">
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <img src="../../../assets/img/perfil.png" id="perfil" alt="">
         </div>
         <div class="row">
             <div class="descripcionocultable col" id="nombreytitulo">
@@ -14,13 +12,22 @@
         <div class="row">
             <div class="descripcionocultable col" id="celularylocacion">
                 <h2><i class="uil uil-phone"></i>11 4406-1506</h2>
-                <h2><i class="uil uil-map-marker"></i> Argentina, Buenos Aires</h2>
+                <h2><i class="uil uil-map-marker"></i> Buenos Aires, Argentina.</h2>
             </div>
         </div>
         <div class="row">
-            <div class="about">
+            <div class="col about">
                 <h2 id="tituloabout">Acerca de mi</h2>
-                <p id="parrafoabout">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut ipsum sapiente quis facere, nisi fugiat molestiae necessitatibus quaerat corporis atque quae eos eligendi perferendis tempore porro aliquid suscipit consequuntur vero.</p>
+                <p id="parrafoabout">Programador Full-stack jr. 23 años. <br>
+                    Me considero una persona metódica, proactiva y muy disciplinada.
+                    Mi objetivo profesional es desarrollarme como programador y
+                    pulir mis habilidades mediante el uso
+                    de mis conocimientos previos y
+                    experiencia. Mi intencion dentro de un nuevo grupo de trabajo es aportar ideas, nuevos
+                    puntos de vista e innovación además de explotar
+                    mi potencial, ayudando a cumplir los
+                    objetivos propuestos.
+                </p>
             </div>
         </div>
     </div>
