--- a/Proyecto_Final/src/app/components/experience/experience.component.html
+++ b/Proyecto_Final/src/app/components/experience/experience.component.html
@@ -10,7 +10,7 @@
                         <p>Comencé mi carrera en el mundo aeronautico brindando servicios a distintas aerolineas tales como Azul, Paranair e Iberia en el aeropuerto de Ezeiza trabajando para una compañia tercerizada llamada "Fly Seg".</p>
                     </li>
                     <li><h1 class="h1inside">Agente de Cargas - American Airlines Cargo</h1> <H3 class="h3inside">mayo 2017 - marzo 2018</H3>
-                        <p>Actualmente me encuentro trabajando para American Airlines Cargo como agente de reservas, trabajamos con clientes de todo el mundo y realizamos envíos de todo tipo, que van desde articulos peligrosos hasta mascotas.
+                        <p>Actualmente me encuentro trabajando para American Airlines Cargo como agente de reservas del departamento en Inglés. trabajamos con clientes de todo el mundo y realizamos envíos de todo tipo, que van desde articulos peligrosos hasta mascotas.
                         </p>
                     </li>
                 </ul>
