--- a/Proyecto_Final/src/app/components/header/header.component.html
+++ b/Proyecto_Final/src/app/components/header/header.component.html
@@ -1,9 +1,16 @@
-<div class="logo">
-    <app-logo></app-logo>
-    <div class="social">
-        <button type="button" class="btn btn-light botones-social"><a href="https://www.facebook.com/leotennis1" target="_blank"><i class="uil uil-facebook-f"></i></a></button>
-        <button type="button" class="btn btn-light botones-social"><a href="https://www.instagram.com/leodario__/" target="_blank"><i class="uil uil-instagram"></i></a></button>
-        <button type="button" class="btn btn-light botones-social"><a href="https://github.com/br4k3n" target="_blank"><i class="uil uil-github-alt"></i></a></button>
-        <button type="button" class="btn btn-light botones-social"><a href="https://www.linkedin.com/in/leonel-chupitea-07ba00180/" target="_blank"><i class="uil uil-linkedin-alt"></i></a></button>
+  <div class="header">
+    <div class="row">
+        <div class="col logo">
+            <app-logo></app-logo>
+        </div>
+        <div class="col social">
+            <button type="button" class="btn btn-light botones-social"><a href="https://www.facebook.com/leotennis1" target="_blank"><i class="uil uil-facebook-f"></i></a></button>
+            <button type="button" class="btn btn-light botones-social"><a href="https://www.instagram.com/leodario__/" target="_blank"><i class="uil uil-instagram"></i></a></button>
+            <button type="button" class="btn btn-light botones-social"><a href="https://github.com/br4k3n" target="_blank"><i class="uil uil-github-alt"></i></a></button>
+            <button type="button" class="btn btn-light botones-social"><a href="https://www.linkedin.com/in/leonel-chupitea-07ba00180/" target="_blank"><i class="uil uil-linkedin-alt"></i></a></button>
+        </div>
+        <div class="col login">
+            <button type="button" class="btn btn-light" id="login">Ingreso</button>
+        </div>
     </div>
-</div>
+</div>  
