--- a/Proyecto_Final/Front-end/src/app/components/about/about.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/about/about.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="row">
             <div class="descripcionocultable col" id="nombreytitulo">
-                <h1>LEONEL CHUPITEA</h1>
+                <h1>{{persona.nombre}} {{persona.apellido}}</h1>
                 <H2>FULL-STACK DEVELOPER JR.</H2>
             </div>
         </div>
