--- a/Proyecto_Final/Front-end/src/assets/css/styles.css
+++ b/Proyecto_Final/Front-end/src/assets/css/styles.css
@@ -6,7 +6,7 @@
 
 html,body
 {
-    background-color: rgb(22 78 99);
+    background-color: rgb(34, 132, 168);
     width: 100%;
     height: 100%;
     margin: 0px;
