--- a/Proyecto_Final/Front-end/src/app/components/banner/banner.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/banner/banner.component.html
@@ -2,5 +2,5 @@
     <h1>Portafolio Responsive 2022 #YoProgramo</h1>
  </div>
 <div class="banner col">
-    <img src="../../../assets/img/LEONEL CHUPITEA.jpg" id="banner" alt="">
+    <img src="../../../assets/img/banner.png" id="banner" alt="">
 </div>
