--- a/Proyecto_Final/Front-end/src/app/components/header/header.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/header/header.component.html
@@ -10,8 +10,8 @@
             <button type="button" class="btn btn-light botones-social"><a href="https://www.linkedin.com/in/leonel-chupitea-07ba00180/" target="_blank"><i class="uil uil-linkedin-alt"></i></a></button>
         </div>
         <div class="col login">
-            <a href="/login"><button type="button" class="btn btn-light" id="login" (click)="login()" *ngIf="!isLogged">Ingreso</button></a>
-            <a><button type="button" class="btn btn-light" id="logOut" (click)="onLogOut()" *ngIf="isLogged">Cerrar sesión</button></a>
+            <a href="/login"><button type="button" class="btn btn-light" id="login" (click)="login()" *ngIf="!isLogged">Login</button></a>
+            <a><button type="button" class="btn btn-light" id="logOut" (click)="onLogOut()" *ngIf="isLogged">LogOut</button></a>
         </div>
     </div>
 </div>  
