--- a/Proyecto_Final/Front-end/src/app/components/about/about.component.css
+++ b/Proyecto_Final/Front-end/src/app/components/about/about.component.css
@@ -4,54 +4,56 @@
     color: rgb(207, 252, 254);
 }
 
-.everything{
-    background-color: rgb(22 78 99);
-}
-
 #perfil{
     margin-top: 16px;
-    border: 10px rgb(18, 142, 177) solid;
+    border: 5px rgb(207, 252, 254) solid;
     border-radius: 250px;
     display: block;
     margin-right: auto;
     margin-left: auto;
     width: 350px;
     height: 400px;
-    background-color: rgb(18, 142, 177);
+    background-image: linear-gradient(to bottom right, #090641, #00e0ff);;
 }
-
-@media (min-width: 600px){
-    #perfil,
-    #nombreytitulo,
-    #celularylocacion{
-        visibility: hidden;
-        display: none;
-    }
-};
 
 .about{
     font-family: 'Source Sans Pro', sans-serif;
     margin: 5px;
+    text-align: center;
+    color: rgb(207, 252, 254);
 }
 
 #tituloabout{
-    text-align: center;
     margin-top: 20px;
     font-weight: 600;
     font-size: 60px;
-    color: rgb(207, 252, 254);
 }
 
 #parrafoabout{
-    text-align: left;
     margin-bottom: 20px;
     font-size: 20px;
     font-weight: 400;
-    color: rgb(207, 252, 254);
-    text-align: center;
 }
 
+h2{
+    text-align: center;
+    align-items: center;
+}
 
+.botonabout{
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
+#datosPersonales{
+    padding-top: 10px;
+}
+
+.aboutdiv{
+    padding: 20px;
+}
 
 
    
