--- a/Proyecto_Final/Front-end/src/app/components/about/about.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/about/about.component.html
@@ -1,34 +1,35 @@
-<div class="container">
+<div class="container aboutdiv">
     <div class="row">
         <div class="col">
-            <img src="../../../assets/img/perfil.png" id="perfil" alt="">
+            <img src={{persona.img}} id="perfil" alt="">
         </div>
-        <div class="row">
+        <div class="col" id="datosPersonales">
             <div class="descripcionocultable col" id="nombreytitulo">
                 <h1>{{persona.nombre}} {{persona.apellido}}</h1>
-                <H2>FULL-STACK DEVELOPER JR.</H2>
+                <H2>{{persona.subtitulo}}</H2>
             </div>
-        </div>
-        <div class="row">
             <div class="descripcionocultable col" id="celularylocacion">
-                <h2><i class="uil uil-phone"></i>11 4406-1506</h2>
-                <h2><i class="uil uil-map-marker"></i> Buenos Aires, Argentina.</h2>
+                <h2><i class="uil uil-phone"></i>{{persona.telefono}}</h2>
+                <h2><i class="uil uil-map-marker"></i> {{persona.ubicacion}}</h2>
+                <br>
+            <button type="button" class="btn btn-info" routerLink="/editcelubi/{{persona.id}}" *ngIf="isLogged">
+                Editar
+            </button>
             </div>
         </div>
-        <div class="row">
-            <div class="col about">
-                <h2 id="tituloabout">Acerca de mi</h2>
-                <p id="parrafoabout">Programador Full-stack jr. 23 años. <br>
-                    Me considero una persona metódica, proactiva y muy disciplinada.
-                    Mi objetivo profesional es desarrollarme como programador y
-                    pulir mis habilidades mediante el uso
-                    de mis conocimientos previos y
-                    experiencia. Mi intencion dentro de un nuevo grupo de trabajo es aportar ideas, nuevos
-                    puntos de vista e innovación además de explotar
-                    mi potencial, ayudando a cumplir los
-                    objetivos propuestos.
-                </p>
-            </div>
+    </div>
+    <div class="row">
+        <div class="col about">
+            <h2 id="tituloabout">Acerca de mi</h2>
+            <h3 id="parrafoabout">{{persona.subtitulo}}</h3>
+            <h3>{{persona.descripcion}}
+            </h3>
         </div>
+        <div class="notLogged">
+            <h2 class="LetraNot" *ngIf="!isLogged">Inicie sesión para agregar/editar su descripción</h2>
+        </div>
+        <button type="button" class="btn btn-info" id="botonabout" routerLink="/editabout/1" *ngIf="isLogged">
+            Editar About
+        </button>
     </div>
 </div>
