--- a/Proyecto_Final/Front-end/src/app/components/experience/edit-experiencia.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/experience/edit-experiencia.component.html
@@ -1,16 +1,17 @@
-<div class="container" **ngIf="expLab">
+<div class="container" *ngIf="expLab">
     <div class="row">
         <div>
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre de la empresa</label>
+                    <label for="nombreE" class="LetraEdit">Nombre de la empresa</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion de la tarea</label>
+                    <label for="descripcionE" class="LetraEdit">Descripcion de la tarea</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
                 </div>
-                <button class="btn btn-light">
+                <br>
+                <button class="btn btn-info">
                     Actualizar
                 </button>
             </form>
