--- a/Proyecto_Final/Front-end/src/app/components/experience/experience.component.css
+++ b/Proyecto_Final/Front-end/src/app/components/experience/experience.component.css
@@ -1,36 +1,21 @@
-.titulo{
+h1{
     text-align: center;
     margin-top: 20px;
     font-weight: 600;
     font-size: 50px;
     color: rgb(207, 252, 254);
+    padding: 10px 0 10px;
 }
 
-.lista1{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 20px;
-    font-weight: 400;
-    color: rgb(211, 211, 211);
-    text-align: center;
-    list-style-position: inside;
-    padding: 1rem;
+#botonexp{
+    padding: 25px;
 }
 
-.h1inside{
-    font-size: 30px;
-    padding: 0.5rem;
+table{
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.h3inside{
-    font-size: 25px;
-    padding-bottom: 0.5rem;
-}
-
-.columnas{
-    padding: 2em;
-}
-
-li{
-    padding: 2rem;
+td{
+    color: rgb(207, 252, 254);
 }
