--- a/Proyecto_Final/Front-end/src/app/components/footer/footer.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
             <span class="footer__subtitle">Desarrollador Full-stack JR.</span>
         </div>
         <div class="col footer__socials">
-            <a class="footer__links" href="#parrafoabout" class="footer__link">About</a>
+            <a class="footer__links" href="#tituloabout" class="footer__link">About</a>
             <br>
             <a href="#" class="footer__social" target="_blank">
                 <i class="uil uil-facebook-f"></i>
