--- a/Proyecto_Final/Front-end/src/app/components/home/home.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
 <app-banner></app-banner>
 <app-about></app-about>
 <app-experience></app-experience>
+<app-educacion></app-educacion>
 <app-skills></app-skills>
 <app-project></app-project>
 <app-footer></app-footer>
