--- a/Proyecto_Final/Front-end/src/app/components/login/login.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/login/login.component.html
@@ -9,15 +9,15 @@
         <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
           <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
             <p class="lead fw-normal mb-0 me-3">Loguearse con</p>
-            <button type="button" class="btn btn-primary btn-floating mx-1">
+            <button type="button" class="btn btn-info btn-floating mx-1">
               <i class="uil uil-facebook-f"></i>
             </button>
 
-            <button type="button" class="btn btn-primary btn-floating mx-1">
+            <button type="button" class="btn btn-info btn-floating mx-1">
               <i class="uil uil-twitter"></i>
             </button>
 
-            <button type="button" class="btn btn-primary btn-floating mx-1">
+            <button type="button" class="btn btn-info btn-floating mx-1">
               <i class="uil uil-linkedin-alt"></i>
             </button>
           </div>
@@ -51,7 +51,7 @@
           </div>
 
           <div class="text-center text-lg-start mt-4 pt-2">
-            <button type="submit" class="btn btn-primary btn-lg"
+            <button type="submit" class="btn btn-info btn-lg"
               style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
             <p class="small fw-bold mt-2 pt-1 mb-0">¿Todavia no tiene una cuenta?<a href="#!"
                 class="link-danger">Registrese</a></p>
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div
-    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-info">
     <!-- Copyright -->
     <div class="text-white mb-3 mb-md-0">
       Copyright © 2022. Todos los derechos reservados.
