--- a/Proyecto_Final/Front-end/src/app/components/project/project.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/project/project.component.html
@@ -1,24 +1,27 @@
-<div class="project">
+<div class="proyecto">
     <div class="row">
         <h1 id="titulo">
             Proyecto
         </h1>
     </div>
-    <div class="row sm-12 md-12 lg-3">
-        <div class="col descripcion">
-            <p id="descripcion">
-                <br>
-                <br>
-                E-commerce de tipo "Sneakers". <br>
-                Desarrollado con HTML, CSS Y Javascript.
-            </p>
-        </div>
-        <div class="col sm-12 md-12 lg-3 video">
-            <video id="video" width="100%" height="100%" 
-                controls="controls"> 
-                <source src="../../../assets/video/E-commerce.mp4" 
-                type="video/mp4"> 
-            </video> 
-        </div>
+    <div class="row">
+            <div class="col descripcion">
+                <p id="descripcion">
+                    <br>
+                    <br>
+                    {{project.projectDesc}}
+                </p>
+            </div>
+            <div class="col sm-12 md-12 lg-6 video" >
+                <img src={{project.projectVideo}} id="project" alt="" width="100%">
+            </div>
+    </div>
+    <div class="notLogged">
+        <h2 class="LetraNot" *ngIf="!isLogged">Inicie sesión para subir información de su propio proyecto</h2>
+    </div>
+    <div class="row">
+        <button type="button" class="btn btn-info" id="buttonproject" routerLink="/editproject/1" *ngIf="isLogged">
+            Editar Proyectos
+        </button>
     </div>
 </div>
