--- a/Proyecto_Final/Front-end/src/app/components/skills/skills.component.css
+++ b/Proyecto_Final/Front-end/src/app/components/skills/skills.component.css
@@ -1,6 +1,9 @@
 .circle{
     margin: 4rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .subtitle{
@@ -12,4 +15,13 @@
 .skills{
     padding-top: 4rem;
     padding-bottom: 4rem;
+}
+
+h1{
+    text-align: center;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 50px;
+    color: rgb(207, 252, 254);
+    padding: 10px 0 10px;
 }
