--- a/Proyecto_Final/Front-end/src/assets/css/styles.css
+++ b/Proyecto_Final/Front-end/src/assets/css/styles.css
@@ -6,10 +6,34 @@
 
 html,body
 {
-    background-color: rgb(34, 132, 168);
+    background-image: linear-gradient(to bottom right, #090641, #00e0ff);;
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+}
+
+.notLogged{
+    text-align: center;
+    margin-top: 20px;
+    font-weight: 600;
+    color: rgb(211, 211, 211);
+    padding: 10px 0 10px;
+}
+
+tr:hover {
+    background-color: rgb(0, 192, 192);
+} 
+
+th, td {
+    border-bottom: 1px solid aqua;
+  }
+
+.letraNot{
+    font-size: large;
+}
+
+.LetraEdit{
+    color: rgb(211, 211, 211);
 }
