--- a/Proyecto_Final/Front-end/src/app/components/project/project.component.css
+++ b/Proyecto_Final/Front-end/src/app/components/project/project.component.css
@@ -1,36 +1,35 @@
 .proyecto{
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 #titulo{
-    font-size: 4em;
+    font-size: 50px;
     color: rgb(207, 252, 254);
     text-align: center;
-    padding-bottom: 8px;
+    padding-bottom: 25px;
 }
 
 #descripcion{
-    font-size: 2em;
+    font-size: 25px;
     color: rgb(211, 211, 211);
     text-align: center;
+    padding-left: 5px;
 }
 
 .descripcion{
-    display: block;
-    margin-left: 10px;
+    margin: 5px;
 }
 
 .video{
-    text-align: center;
-    margin: 7%;
-}
-
-#video{
-    box-shadow: 10px 10px 45px #000000;
-    box-shadow: ejeX ejeY difumasion color;
+    align-items: center;
+    padding: 5px;
 }
 
 #buttonproject{
     margin-bottom: 20px;
+}
+
+#lastnot{
+    padding: 25px 0 25px;
 }
