--- a/Proyecto_Final/Front-end/src/app/components/project/project.component.html
+++ b/Proyecto_Final/Front-end/src/app/components/project/project.component.html
@@ -5,18 +5,16 @@
         </h1>
     </div>
     <div class="row">
-            <div class="col descripcion">
-                <p id="descripcion">
-                    <br>
-                    <br>
-                    {{project.projectDesc}}
-                </p>
-            </div>
-            <div class="col sm-12 md-12 lg-6 video" >
-                <img src={{project.projectVideo}} id="project" alt="" width="100%">
-            </div>
+        <div class="col-12 col-sm-12 col-md-2 col-lg-3 descripcion">
+            <p id="descripcion">
+                {{project.projectDesc}}
+            </p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-9 col-lg-8 video" style="height: auto; overflow: hidden;">
+                <img src={{project.projectVideo}} class="img-fluid" id="project" alt="">
+        </div>
     </div>
-    <div class="notLogged">
+    <div class="notLogged" id="lastnot">
         <h2 class="LetraNot" *ngIf="!isLogged">Inicie sesión para subir información de su propio proyecto</h2>
     </div>
     <div class="row">
